<resources>
    <string name="app_name">Veggiee</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">290026358519830</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb290026358519830</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="proceed">PROCEED</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password">Password</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="place_order">Place Order</string>
    <string name="order_status">Order Status</string>
    <string name="logo">Logo</string>
    <string name="channel_name">Order Status</string>
    <string name="channel_description">Changing of order status by admin</string>
    <string name="emptyViewText">Coming Soon!!!</string>
    <string name="no_order_placed_yet">No Order placed yet!!!</string>
    <string name="no_internet">No Internet</string>
    <string name="background_image">background image</string>
    <string name="fast_food">Fast Food</string>
    <string name="sub_category_text">Sub Category</string>
    <string name="fast_food_text">Fast Food</string>
    <string name="rs_text">Rs.</string>
    <string name="text_100">100</string>
    <string name="label_price">Price: Rs</string>
    <string name="label_price_sign">-/</string>
    <string name="label_discount">Discount:</string>
    <string name="label_discount_sign">%</string>
    <string name="food_name">Food Name</string>
    <string name="price_rs_1000">Price: Rs 1000/-</string>
    <string name="discount_10">Discount: 10%</string>
    <string name="description">Description</string>
    <string name="subscribe">Subscribe</string>
    <string name="order_history">Orders History</string>
</resources>